Bugfix: 9b54dd9 on Linux
File <input> was being cropped

--- a/examples/hotswap/ui/style.css
+++ b/examples/hotswap/ui/style.css
@@ -31,6 +31,10 @@ body {
     pointer-events: none;
 }
 
+#select-file {
+    width: 100%;
+}
+
 .hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
